@@ -1086,6 +1086,15 @@ Recipient Region
 #search_hierarchy_txt
 Hierarchy
 
+#search_budget_type_txt
+Budget Type
+
+#search_planned_disbursement_type_txt
+Planned Disbursement Type
+
+#search_activity_scope_txt
+Activity Scope
+
 #search_button1_txt
 Explore Results
 
