@@ -477,6 +477,21 @@
 	<div class="text">{search_text}</div><span><span class="filter_icon">&#10096;&#10097;</span>{search_transaction_type_txt}</span>
 </div>
 
+#search_display_budget_type trim=ends
+<div class="search_query">
+	<div class="text">{search_text}</div><span><span class="filter_icon">&#10096;&#10097;</span>{search_budget_type_txt}</span>
+</div>
+
+#search_display_planned_disbursement_type trim=ends
+<div class="search_query">
+	<div class="text">{search_text}</div><span><span class="filter_icon">&#10096;&#10097;</span>{search_planned_disbursement_type_txt}</span>
+</div>
+
+#search_display_activity_scope trim=ends
+<div class="search_query">
+	<div class="text">{search_text}</div><span><span class="filter_icon">&#10096;&#10097;</span>{search_activity_scope_txt}</span>
+</div>
+
 #main_searchmin
 <div class="default min">
 	<div class="search_cont">
