@@ -794,6 +794,30 @@
 			<option value></option>
 			{search_options_tied_status}
 		</select>
+	</div><div class="search_wrap">		<!-- Budget Type	-->
+		<div class="search_label">
+			<span>&#10096;&#10097;</span> {search_budget_type_txt}
+		</div>
+		<select aria-label="Select a default budget type from this dropdown" id="view_search_select_budget_type" class="chosen" multiple>
+			<option value></option>
+			{search_options_budget_type}
+		</select>
+	</div><div class="search_wrap mid">		<!-- Planned Disbursement Type	-->
+		<div class="search_label">
+			<span>&#10096;&#10097;</span> {search_planned_disbursement_type_txt}
+		</div>
+		<select aria-label="Select a default planned disbursement type from this dropdown" id="view_search_select_planned_disbursement_type" class="chosen" multiple>
+			<option value></option>
+			{search_options_planned_disbursement_type}
+		</select>
+	</div><div class="search_wrap">		<!-- Activity Scope	-->
+		<div class="search_label">
+			<span>&#10096;&#10097;</span> {search_activity_scope_txt}
+		</div>
+		<select aria-label="Select a default acitivity scope from this dropdown" id="view_search_select_activity_scope" class="chosen" multiple>
+			<option value></option>
+			{search_options_activity_scope}
+		</select>
 	</div>
 	<div class="search_external">
 		{search_external_txt} <span>- View a specific list of activities on d-portal.</span>
