@@ -75,7 +75,7 @@ span.block		{display:block;}
 .wrap_location .header_section,
 .wrap_budget .header_section	{margin-top:0;}
 .wrap_document					{margin:30px 0;}
-.wrap_budget_not_provided		{font-size:14px; padding-bottom:20px;}
+.wrap_budget_not_provided		{font-size:16px; padding-bottom:20px;}
 .wrap_budget_not_provided span	{font-weight:bold; text-transform:lowercase;}
 .reporting_org span				{font-size:12px; margin-left:5px; vertical-align:middle;}
 .reporting_org .narrative:nth-of-type(2)	{font-style:italic;}
