@@ -1,3 +1,8 @@
+Development Portal (2020-09-18 shi)
+==============================
+Search 2 update filter budget, planned disbursement and activity scope
+
+
 Development Portal (2020-09-16 shi)
 ==============================
 Css fixes
